--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ stages:
               provider: 'azurerm'
               command: 'init'
               backendServiceArm: 'terraform SP - AZ -Students'
-              backendAzureRmResourceGroupName: '$(bkstgrg)'
+              backendAzureRmResourceGroupName: '$(bkstrgrg)'
               backendAzureRmStorageAccountName: '$(bkstrg)'
               backendAzureRmContainerName: '$(bkcontainer)'
               backendAzureRmKey: '$(bkstrgkey)'
