Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ variables:
   bkstrgrg: 'Terraform-lab-rg'
   bkstrg: 'alcavdes1tsa1'
   bkcontainer: 'terraform'
-  bkstrgkey: 'terraform.tfstate'
+  bkstrgkey: 'terraformalz.tfstate'
 
 stages:
   - stage: tfvalidate
