--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,7 +56,7 @@ stages:
             inputs:
               provider: 'azurerm'
               command: 'init'
-              commandOptions: '-force-copy'
+              //commandOptions: '-force-copy'
               backendServiceArm: 'terraform SP - AZ -Students'
               backendAzureRmResourceGroupName: '$(bkstrgrg)'
               backendAzureRmStorageAccountName: '$(bkstrgacc)'
@@ -67,6 +67,7 @@ stages:
             inputs:
               provider: 'azurerm'
               command: 'plan'
+              commandOptions: '-var-file .\parameters.tfvars'
               environmentServiceNameAzureRM: 'terraform SP - AZ -Students'
           - task: TerraformTaskV4@4
             displayName: Apply
